--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "sbs-report",
   "version": "1.0.0",
-  "description": "ระบบรายงานผลการดำเนินงานคณะทำงานย่อย สบส. ที่ 9/2569",
+  "description": "ระบบรายงานผลการดำเนินงานคณะทำงานย่อย สบส.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "better-sqlite3": "^11.7.0"
+    "sql.js": "^1.10.3"
   },
   "engines": {
     "node": ">=18"
